Bug 491753 - Button: 'Use Current Location' returns empty string
Summary: Button: 'Use Current Location' returns empty string
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.05.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-08-15 15:33 UTC by madness742
Modified: 2024-08-30 12:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Results after clicking on 'Use Current Location'. (92.70 KB, image/png)
2024-08-15 15:33 UTC, madness742
Details

Note You need to log in before you can comment on or make changes to this bug.
Description madness742 2024-08-15 15:33:46 UTC
Created attachment 172649 [details]
Results after clicking on 'Use Current Location'.

SUMMARY
When clicking on 'Use Current Location' it returns an empty string. 

STEPS TO REPRODUCE
1. Click on the hamburger menu.
2. Click on Configure
3. Click on Configure Dolphin
4. In the interface tab, click on 'Use Current Location'

OBSERVED RESULT
An empty string is returned.

EXPECTED RESULT
The current path should be returned as a string.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.4.0 
Qt Version: 6.7.2
Comment 1 Nate Graham 2024-08-16 15:29:00 UTC
Can confirm with current git master.
Comment 2 Akseli Lahtinen 2024-08-30 10:54:59 UTC
Git commit fc3a6594cc2572da95e7c889793363c3ecdc4635 by Akseli Lahtinen.
Committed on 30/08/2024 at 10:54.
Pushed by akselmo into branch 'master'.

settings: Fix the Use Current Location button

During the Dolphin settings revamp
(https://invent.kde.org/system/dolphin/-/commit/489b56b68bb29e81337e115c490eea4403001b71?)
this QUrl had been forgot to add back so that the
FoldersTabsSettingsPage knows what is the current url.

This change checks for the main window of dolphin, then gets
the URL of it whenever useCurrentLocation is called.

However, when this is used as KCM, the button is not
created, since there it doesn't make sense.

M  +1    -0    src/CMakeLists.txt
M  +19   -0    src/settings/interface/folderstabssettingspage.cpp

https://invent.kde.org/system/dolphin/-/commit/fc3a6594cc2572da95e7c889793363c3ecdc4635
Comment 3 Akseli Lahtinen 2024-08-30 12:52:40 UTC
Git commit 71cc4e65df54c44d1d8a6e2d78a53a002ca8145c by Akseli Lahtinen.
Committed on 30/08/2024 at 12:42.
Pushed by akselmo into branch 'release/24.08'.

settings: Fix the Use Current Location button

During the Dolphin settings revamp
(https://invent.kde.org/system/dolphin/-/commit/489b56b68bb29e81337e115c490eea4403001b71?)
this QUrl had been forgot to add back so that the
FoldersTabsSettingsPage knows what is the current url.

This change checks for the main window of dolphin, then gets
the URL of it whenever useCurrentLocation is called.

However, when this is used as KCM, the button is not
created, since there it doesn't make sense.


(cherry picked from commit fc3a6594cc2572da95e7c889793363c3ecdc4635)

f8480aac settings: Fix the Use Current Location button, hide button in KCM

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +1    -0    src/CMakeLists.txt
M  +19   -0    src/settings/interface/folderstabssettingspage.cpp

https://invent.kde.org/system/dolphin/-/commit/71cc4e65df54c44d1d8a6e2d78a53a002ca8145c